src/gui/theme/theme.css
/* Global */

html {
	height: 100%;
}

body {
	height: 100%;
	margin: 0;
	overflow: hidden;

	background-color: black;
	color: white;
	font-family: "Open Sans";
}

#container,
#root {
	height: 100%;
}

/* Bootstrap */

:root {
	--bs-code-color: #c39f79;
}

.form-control {
	background-color: #435c69 !important;
	color: white !important;
}

::placeholder {
	color: rgb(184, 189, 197) !important;
}

/* MUI */

.navbar-volume-slider > .MuiSlider-thumb:before {
	content: "🎵" !important;
	transform: scale(0.75) !important;
}

.menu-volume-slider > .MuiSlider-thumb:before {
	content: "🎵" !important;
	transform: scale(0.6) translate(-2px, -2px) !important;
}

/* CodeMirror */

.cm-theme {
	width: 100%;
}

.cm-gutters {
	user-select: none;
}

.cm-gutter-lint {
	border-right: 1px dashed #577295;
}

.cm-tooltip {
	left: 55px !important;
	/* // HACK: No idea what I'm doing */
}

/* Xterm.js */

.xterm {
	padding: 8px;
}

/* Custom scrollbar */

::-webkit-scrollbar {
	width: 12px;
}
::-webkit-scrollbar-track {
	-webkit-box-shadow: inset 0 0 6px rgba(153, 153, 153, 0.3);
	border-radius: 10px;
}
::-webkit-scrollbar-thumb {
	border-radius: 10px;
	-webkit-box-shadow: inset 0 0 6px rgba(188, 188, 188, 0.5);
}

/* Markdown */

.markdown-view h4 {
	margin-top: 8px;
}

.markdown-view table {
	margin-top: 16px;
}

.markdown-view th {
	border: 1px solid #577295;
	padding: 4px;
}

.markdown-view td {
	border: 1px solid #577295;
	padding: 4px;
}

.markdown-view code {
	color: var(--bs-code-color);
}

/* Tooltips */

.tooltip:has(.memoryTooltip) {
	user-select: none;
}

.tooltip:has(.memoryTooltip):hover {
	opacity: 0.1 !important;
}

